ILLDAN-193 [pref]: 백로그 조회 성능 최적화
- 기존: Todo 리스트를 순회하며 개별적으로 Routine을 조회하여 쿼리가 N번 발생
- 변경: todoId 목록을 추출하여 IN 쿼리로 일괄 조회 및 메모리 매핑(Map) 방식으로 변경
- 결과: 불필요한 DB 커넥션을 제거하여 조회 성능 대폭 향상